<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>JavaProject</groupId>
  <artifactId>javademoproject</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>javademoproject Maven Webapp</name>
  <url>http://maven.apache.org</url>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<aspectj.version>1.9.5</aspectj.version>
		<jmeterThreads>1</jmeterThreads>
		<hamcrest.version>1.3</hamcrest.version>
		<jacoco.plugin.version>0.8.1</jacoco.plugin.version>
	</properties>

<dependencies>

<!-- https://mvnrepository.com/artifact/junit/junit -->
<dependency>
<groupId>junit</groupId>
<artifactId>junit</artifactId>
<version>4.13.2</version>
<scope>test</scope>
</dependency>
   
	<dependency>
		<groupId>org.hamcrest</groupId>
		<artifactId>hamcrest-core</artifactId>
		<version>${hamcrest.version}</version>
	</dependency>

	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>8.0.26</version>
	</dependency>
		
	<dependency>
            	<groupId>net.sourceforge.jexcelapi</groupId>
            	<artifactId>jxl</artifactId>
            	<version>2.6.12</version>
        </dependency>

	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-java</artifactId>
		<version>3.141.59</version>
	</dependency>

	<dependency>
		<groupId>io.github.bonigarcia</groupId>
		<artifactId>webdrivermanager</artifactId>
		<version>4.3.1</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.14.3</version>
	</dependency>

	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
	</dependency>

	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>poi</artifactId>
		<version>3.9</version>
	</dependency>
	
	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>poi-ooxml</artifactId>
		<version>3.9</version>
	</dependency>

	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>poi-ooxml-schemas</artifactId>
		<version>3.9</version>
	</dependency>
	
	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>poi-scratchpad</artifactId>
		<version>3.9</version>
		</dependency>
	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>ooxml-schemas</artifactId>
		<version>1.1</version>
	</dependency>

	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>openxml4j</artifactId>
		<version>1.0-beta</version>
	</dependency>

	<dependency>
		<groupId>com.aventstack</groupId>
		<artifactId>extentreports</artifactId>
		<version>3.1.5</version>
	</dependency>

	<dependency>
		<groupId>io.qameta.allure</groupId>
		<artifactId>allure-testng</artifactId>
		<version>2.12.0</version>
	</dependency>

	<dependency>
		<groupId>javax.xml.bind</groupId>
		<artifactId>jaxb-api</artifactId>
		<version>2.3.1</version>
	</dependency>

	<dependency>
		<groupId>com.tesults.testng</groupId>
		<artifactId>tesults-testng</artifactId>
		<version>1.0.2</version>
	</dependency>

</dependencies>

<reporting>
	<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
			
		
	<plugin>
            	<groupId>org.apache.maven.plugins</groupId>
            	<artifactId>maven-surefire-report-plugin</artifactId>
            	<version>2.19.1</version>
            	<reportSets>
                	<reportSet>
                    		<reports>
                        	<report>report-only</report>
                    		</reports>
                	</reportSet>
            	</reportSets>
             	<configuration>
                	<showSuccess>false</showSuccess>
           	 </configuration>
	</plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jxr-plugin</artifactId>
            <version>3.1.1</version>
        </plugin>

	    <plugin>
            	<groupId>org.owasp</groupId>
            	<artifactId>dependency-check-maven</artifactId>
            	<version>8.0.1</version>
            <reportSets>
                <reportSet>
                    <reports>
                        <report>check</report>
                    </reports>
                </reportSet>
            </reportSets>
        </plugin>

</plugins>
</reporting>

<build>

<finalName>MoonPageWebApp</finalName>

<plugins>

<!-- OWASP Dependency Check -->
<plugin>
            <groupId>org.owasp</groupId>
            <artifactId>dependency-check-maven</artifactId>
            <version>8.0.1</version>
            <configuration>
                <format>ALL</format>
                <suppressionFiles>
                    <suppressionFlie>dependency-check-suppressions.xml</suppressionFlie>
                </suppressionFiles>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>check</goal>
                    </goals>
                </execution>
            </executions>
</plugin>

<plugin>
	<!-- Configures the compiler. -->
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.8.1</version>
	<configuration>
		<encoding>iso-8859-1</encoding>
			<source>1.8</source>
			<target>1.8</target>
		<compilerArgs>
        	<arg>-Xlint</arg>
         	</compilerArgs>
	</configuration>
</plugin>

<plugin>
	<!-- groupId>org.apache.maven.plugins</groupId -->
	<!-- artifactId>maven-surefire-plugin</artifactId -->
	<!-- version>3.0.0-M5</version -->
	<!-- configuration -->
	<!-- forkCount>3</forkCount -->
	<!-- reuseForks>true</reuseForks -->
	<!-- argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine -->

  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
<configuration>
    <forkCount>3</forkCount>
    <reuseForks>true</reuseForks>
    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>

	<suiteXmlFiles>
		<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
	</suiteXmlFiles>

	<argLine>
		-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
	</argLine>
			
	<testFailureIgnore>true</testFailureIgnore>
</configuration>

<dependencies>
	<dependency>
		<groupId>org.aspectj</groupId>
		<artifactId>aspectjweaver</artifactId>
		<version>${aspectj.version}</version>
	</dependency>
</dependencies>
</plugin>

<plugin>
        <!-- Integration tests are run by failsafe. -->
        <!-- Classes under src/test/java called *IT are included automatically. -->
        <!-- Integration tests are run during the verify phase. -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
</plugin>
	
<plugin>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>cobertura-maven-plugin</artifactId>
     <version>2.7</version>
     <configuration>
        <formats>
           <format>xml</format>
	   <format>html</format>
        </formats>
        <check/>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
              <goals>
                <goal>cobertura</goal>
              </goals>
          </execution>
        </executions>
</plugin>	
	

<plugin>
        <!-- Code coverage plugin. -->
        <!-- This sets up code coverage for the unit tests, the integration tests, -->
        <!-- and the combined coverage of both. -->
        <!-- After running a `mvn clean install`, open `target/site/jacoco-both/index.html` in a browser. -->

        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.plugin.version}</version>
        <executions>
          <execution>
            <id>jacoco-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-prepare-agent-integration</id>
            <goals>
              <goal>prepare-agent-integration</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules />
            </configuration>
          </execution>
          <execution>
	  <!-- Combine the code coverage statistics generated for the unit and the integration tests. -->
            <id>jacoco-merge</id>
            <goals>
              <goal>merge</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <fileSets>
                <fileSet>
                  <directory>${project.build.directory}</directory>
                  <includes>
                    <include>*.exec</include>
                  </includes>
                </fileSet>
              </fileSets>
              <destFile>${project.build.directory}/jacoco-both.exec</destFile>
            </configuration>
          </execution>
          <execution>
            <id>jacoco-integration</id>
            <goals>
              <goal>report-integration</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-reportboth</id>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>${project.build.directory}/jacoco-both.exec</dataFile>
              <outputDirectory>${project.reporting.outputDirectory}/jacoco-both</outputDirectory>
            </configuration>
          </execution>
        </executions>
</plugin>

<plugin>
	<groupId>com.lazerycode.jmeter</groupId>
	<artifactId>jmeter-maven-plugin</artifactId>
	<version>3.6.1</version>
<executions>
	<!-- Run JMeter tests -->
	<execution>
		<id>configuration</id>
	<goals>
		<goal>configure</goal>
	</goals>
	</execution>

	<execution>
		<id>jmeter-tests</id>
	<goals>
		<goal>jmeter</goal>
	</goals>
	</execution>

	<!-- Fail build on errors in test -->
	<execution>
		<id>jmeter-check-results</id>
	<goals>
		<goal>results</goal>
	</goals>
	</execution>
</executions>
		<configuration>
			<testFilesDirectory>src/</testFilesDirectory>
		</configuration>
</plugin>

</plugins>

</build>
  
<distributionManagement>
  <repository>
    <id>test-test</id>
    <name>test-test</name>
    <url>https://test-975136350146.d.codeartifact.ap-south-1.amazonaws.com/maven/test/</url>
  </repository>
</distributionManagement>
</project>
